<resources>
    <string name="app_name">Nice Project</string>
    <string name="logo">logo</string>
    <string name="username">아이디 입력</string>
    <string name="password">비밀번호 6자리 입력</string>
    <string name="remember">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="status">나이스그룹</string>
    <string name="product">홍길동님</string>
    <string name="forgotpassword">비밀번호찾기</string>
    <string name="price">300,000P</string>
    <string name="region">지역선택</string>
    <string-array name="spinner_region">
        <item>지역선택</item>
    </string-array>
</resources>
