<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.7dp"
            android:layout_marginStart="13.3dp"
            android:layout_marginTop="17dp"
            android:text="@string/status"
            android:textColor="@color/title"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameproduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.7dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="17dp"
            android:text="@string/product"
            android:textColor="@color/title"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.7dp"
            android:layout_marginEnd="6.7dp"
            android:layout_marginTop="17dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="23.3dp"
            android:layout_marginBottom="16.7dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="13.3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/qroff" />


    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/copy" />

            <EditText
                android:id="@+id/region"
                android:background="@drawable/custom_border_editbox"
                android:layout_width="match_parent"
                android:layout_height="33.3dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="13.3dp"
                android:layout_marginEnd="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:drawableEnd="@drawable/area_off"
                android:paddingEnd="10dp"
                android:paddingStart="6.7dp"
                android:inputType="textPersonName"
                android:hint="@string/region"
                android:textSize="14sp"
                />






        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53.3dp"
        android:orientation="horizontal"
        android:background="@color/bar">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:srcCompat="@drawable/home_off" />
    </LinearLayout>

</LinearLayout>